--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>Adminitracíon de artículos</h1>
 
-<table border="1">
+<table border="1" *ngIf="hayarticulos()">
   <thead>
     <tr>
       <th>Codigo</th>
